--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.10",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "gsap": "^3.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
